wip: correct comments in progress

--- a/src/docs/5.37.x/page-builder/extending/lexical-editor-configuration-api.mdx
+++ b/src/docs/5.37.x/page-builder/extending/lexical-editor-configuration-api.mdx
@@ -67,6 +67,11 @@ export const PbLexicalEditorPlugin = () => {
 Access to the configuration options:
 
 ```jsx apps/admin/plugins/lexicalEditorPlugins/PbLexicalEditorPlugin.tsx
+import React from "react";
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading, Paragraph } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
 	<Heading.ToolbarAction name={"toolbarAction"} element={<ToolbarAction />} />
   <Paragraph.Plugin name={"newPlugin"} element={<NewLexicalPlugin />} />
@@ -103,46 +108,62 @@ All of this configuration options have the same role. They override, remove or a
 
 In this section, we will cover configuration step by step and use the Header and Paragraph configuration API to customize the look and functionality of the Heading component.
 
-## Add an action
+### Add an action
 
 To add a new custom toolbar action component register your component with a unique `name` and provide your custom action component in the `element` prop.
 
 ```jsx apps/admin/plugins/lexicalEditorPlugins/PbLexicalEditorPlugin.tsx
+import React from "react";
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading, Paragraph } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
 	<Heading.ToolbarAction name={"myAction"} element={<button>MA</button>} />
   <Paragraph.ToolbarAction name={"newAction"} element={<button>MA</button>} />
 </LexicalEditorConfig>
 ```
 
-## Replacing an action
+### Replacing an action
 
 To override the existing action component specify the action `name` of the existing Webiny toolbar action and provide your toolbar action component in the element prop.
 
 ```jsx apps/admin/plugins/lexicalEditorPlugins/PbLexicalEditorPlugin.tsx
+import React from "react";
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
 	<Heading.ToolbarAction name={"fontSize"} element={<button>MA</button>} />
 </LexicalEditorConfig>
 ```
 
-## Remove an action
+### Remove an action
 
 To remove the toolbar action specify the Webiny toolbar action name, add the `remove` prop and the action will be removed.
 
 ```jsx apps/admin/plugins/lexicalEditorPlugins/PbLexicalEditorPlugin.tsx
+import React from "react";
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Paragraph } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
 	<Paragraph.ToolbarAction name={"fontSize"} remove/>
 </LexicalEditorConfig>
 ```
 
-<Alert type={"warning"}>
-  Be aware that plugins and nodes related to this particular action are still mounted.
-</Alert>
-
-## Positioning an action
+### Positioning an action
 
 To change the order of the toolbar actions, first, you need to provide the `name` of the action you want to move. Next, add the `before` or `after` prop with the name of the component that is used as a reference to the preferred spot.
 
 ```jsx apps/admin/plugins/lexicalEditorPlugins/PbLexicalEditorPlugin.tsx
+import React from "react";
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading, Paragraph } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
 	<Heading.ToolbarAction name={"fontSize"} after={"typography"}/>
   <Paragraph.ToolbarAction name={"fontSize"} before={"divider2"}/>
@@ -153,16 +174,21 @@ To change the order of the toolbar actions, first, you need to provide the `name
 The configuration of the plugins will follow the same approach as the toolbar actions so we will write a code example that will cover all actions.
 
 ```jsx apps/admin/plugins/lexicalEditorPlugins/PbLexicalEditorPlugin.tsx
+import React from "react";
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Heading, Paragraph } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-   // Override the default Webiny link plugin with your custom link plugin
+  {/* Override the default Webiny link plugin with your custom link plugin */}
 	<Heading.Plugin name={"link"} element={<CustomFloatingLinkEditorPlugin />}/>
-   // Remove the plugin for the font size formatting
+  {/* Remove the plugin for the font size formatting */}
   <Paragraph.Plugin name={"fontSize"} remove />
-  // Add a new plugin
+  {/* Add a new plugin */}
   <Paragraph.Plugin name={"newPLugin"} element={<NewPlugin/>} />
-  // Place your plugin after the font size plugin
+  {/* Place your plugin after the font size plugin */}
   <Paragraph.Plugin name={"newPLugin"} element={<NewPlugin/>} after={"fontSize"} />
-  // Place the existing plugin before your new plugin
+  {/* Place the existing plugin before your new plugin */}
   <Paragraph.Plugin name={"link"} before={"newPlugin"} />
 </LexicalEditorConfig>
 ```
@@ -176,14 +202,19 @@ Please check this Lexical documentation for more information about the nodes.
 Link: [https://lexical.dev/docs/concepts/nodes](https://lexical.dev/docs/concepts/nodes)
 
 ```jsx apps/admin/plugins/lexicalEditorPlugins/PbLexicalEditorPlugin.tsx
+import React from "react";
+import { LexicalEditorConfig } from "@webiny/app-page-builder";
+
+const { Paragraph } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-  // Add a new node
+  {/* Add a new node */}
   <Paragraph.Node name={"newNode"} node={NewNode} />
-  // Place your chat node after the NewNode
+  {/* Place your chat node after the NewNode */}
   <Paragraph.Node name={"chatNode"} node={ChatNode} after={ChatNode} />
-  // Place your chat node after the NewNode
+  {/* Place your chat node after the NewNode */}
   <Paragraph.Node name={"chatNode"} before={ChatNode} />
-  // Remove your nodo
+  {/* Remove your node */}
   <Paragraph.Node name={"newNode"} remove />
 </LexicalEditorConfig>
 ```
@@ -202,31 +233,26 @@ The image above shows the Lexical editor in the Headless CMS. Technically we hav
 
 ## Lexical Configuration for Headless CMS
 
-To hook into the Lexical editor in the Headless CMS ******app, you need to import the Lexical configuration API from the `@webiny/app-headless-cms` package.
+To hook into the Lexical editor in the Headless CMS app, you need to import the Lexical configuration API from the `@webiny/app-headless-cms` package.
 
 First, we need to import the root configuration component `LexicalEditorConfig`.
-
-```jsx apps/admin/plugins/lexicalEditorPlugins/CmsLexicalEditorPlugin.tsx
-import React from "react";
-import { LexicalEditorConfig } from "@webiny/app-page-builder";
-...
-
-const { ToolbarAction, Plugin, Node } = LexicalEditorConfig;
-...
-```
-
 The difference in the API from the Page Builder app is that here we have only one Lexical Editor configuration.
-So the `LexicalEditorConfig` will export directly the ToolbarAction, Plugin, and Node.
+So the `LexicalEditorConfig` will export directly the `ToolbarAction`, `Plugin`, and `Node`.
 
-**Toolbar configuration**
+## Toolbar configuration
 
 The configuration of the plugins will follow the same approach as the toolbar actions so we will write a code example that will cover all actions.
 
 ```jsx apps/admin/plugins/lexicalEditorPlugins/CmsLexicalEditorPlugin.tsx
+import React from "react";
+import { LexicalEditorConfig } from "@webiny/app-headless-cms";
+
+const { ToolbarAction } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-   // Override the default font size action
+   {/* Override the default font size action */}
 	<ToolbarAction name={"fontSize"} element={<button>MA</button>} />
-   // Remove the plugin for the font size formatting
+   {/* Remove the plugin for the font size formatting */}
   <ToolbarAction name={"fontSize"} remove />
   // Add a new toolbar action
   <ToolbarAction name={"myAction"} element={<button>MA</button>} />
@@ -237,15 +263,20 @@ The configuration of the plugins will follow the same approach as the toolbar ac
 </LexicalEditorConfig>
 ```
 
-**Plugin configuration**
+## Plugin configuration
 
 The configuration of the plugins will follow the same approach as the toolbar actions so we will write a code example that will cover all actions.
 
 ```jsx apps/admin/plugins/lexicalEditorPlugins/CmsLexicalEditorPlugin.tsx
+import React from "react";
+import { LexicalEditorConfig } from "@webiny/app-headless-cms";
+
+const { Plugin } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
-   // Override the default Webiny link plugin with your custom link plugin
+  // Override the default Webiny link plugin with your custom link plugin
 	<Plugin name={"link"} element={<CustomFloatingLinkEditorPlugin />}/>
-   // Remove the plugin for the font size formatting
+  // Remove the plugin for the font size formatting
   <Plugin name={"fontSize"} remove />
   // Add a new plugin
   <Plugin name={"newPLugin"} element={<NewPlugin/>} />
@@ -256,11 +287,16 @@ The configuration of the plugins will follow the same approach as the toolbar ac
 </LexicalEditorConfig>
 ```
 
-**Node configuration**
+## Node configuration
 
 Node configuration API has a `node` prop where you can add the custom node class. Other API configurations are very like the toolbar actions and plugins.
 
 ```jsx apps/admin/plugins/lexicalEditorPlugins/CmsLexicalEditorPlugin.tsx
+import React from "react";
+import { LexicalEditorConfig } from "@webiny/app-headless-cms";
+
+const { Node } = LexicalEditorConfig;
+
 <LexicalEditorConfig>
   // Add a new node
   <Node name={"newNode"} node={NewNode} />
