wip: update - review - legacy alert, custom configuration, overview image

--- a/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/integrations/legacy-render-rich-text-content.mdx
@@ -7,7 +7,7 @@ import Link from "next/link";
 import { Alert } from "@/components/Alert";
 
 <Alert type="warning">
-  This article is moved from version 5.37.0 to a new page. Clink on this <Link href={"https://www.webiny.com/docs/headless-cms/integrations/render-lexical-rich-text-content"}>link</Link> to learn more.
+  This document covers rendering of rich text content via the legacy Rich Text Editor, which was deprecated with the <Link href={"../../release-notes/5.37.0/changelog"}>5.37.0 release</Link>. For the latest information, please visit the new <Link href={"./render-lexical-rich-text-content"}>Render Rich Text Content</Link> article.
 </Alert>
 
 <Alert type="success" title="What you'll learn">
