--- a/src/docs/5.37.x/headless-cms/integrations/render-lexical-rich-text-content.mdx
+++ b/src/docs/5.37.x/headless-cms/integrations/render-lexical-rich-text-content.mdx
@@ -1,6 +1,6 @@
 ---
 title: Render Rich Text Content
-description:  Render rich text content from Headless CMS in React
+description:  Render rich text content from Headless CMS in custom React app
 ---
 
 import Link from "next/link";
@@ -10,16 +10,15 @@ import overviewLexicalRenderer from "./assets/overview-lexical-renderer.jpeg";
 import configureLexicalRenderer from "./assets/renderer-configuration.jpeg";
 
 <Alert title="CAN I USE THIS?" type={"info"}>
-  If you building custom react app, and you consider using Headless CMS, use this component to render your content.<br/>
   This feature is available since Webiny <b>v5.37.0</b>.
 </Alert>
 
 <WhatYouWillLearn>
-  - How to render rich text content from Headless CMS.
+  - How to render rich text content from Headless CMS in a custom React app
 </WhatYouWillLearn>
 
 ## Overview
-One of the commonly used field types in our Headless CMS is a rich text field. This field uses [Lexical Rich Text Editor](https://playground.lexical.dev/) to allow users to create nicely formatted rich text content quickly.
+One of the commonly used field type used while creating content models in Webiny's Headless CMS is the rich text field. This field uses [Lexical Rich Text Editor](https://playground.lexical.dev/) to allow users to create nicely formatted rich text content quickly.
 
 <Image src={overviewLexicalRenderer} title="Overview - Render Rich Text Content From Headless CMS" />
  
@@ -32,14 +31,14 @@ Request the data from the GraphQl API and render the content by use of our prede
 </Alert>
 
 # Usage
-To render CMS content we need to go through 3 steps:
+Rendering content in a custom React app consists of the following three steps:
 1. Installation of the `@webiny/react-rich-text-lexical-renderer` package.
 2. Add Webiny theme styles to your project.
-3. Mount the component and render the CMS content.
+3. Mount the `RTLR` component.
 
 ### 1. Installation
 
-In your React app, install the following dependency:
+In your React app, install the following NPM package:
 
 ```
 npm install --save @webiny/react-rich-text-lexical-renderer
@@ -52,7 +51,7 @@ yarn add @webiny/react-rich-text-lexical-renderer
 ```
 
 ### 2. Add Webiny Theme Styles To Your Project
-To match the content styles, you need to copy the Webiny `theme.ts` styles or file, and move into your project.
+To render the same theme styles from the Headless CMS app, copy the `theme.ts` file into your React app.
 
 Here are the steps:
 1. Go to your Webiny project folder.
@@ -66,7 +65,7 @@ Import and mount the `<RichTextLexicalRenderer />` into your page. Next, provide
 then pass it to the component like this:
 
 ```tsx HomePage.tsx
-import React from 'react';
+import React from "react";
 import { RichTextLexicalRenderer } from "@webiny/react-rich-text-lexical-renderer";
 import { useCmsContent } from "../myWebinyGraphqlHooks/useCmsContent";
 import { theme } from "../myWebinyTheme/theme";
@@ -77,21 +76,16 @@ export const HomePage = () => {
     // Mount the component
     <RichTextLexicalRenderer value={content} theme={theme} />
   );
-}
+};
 ```
 
-<Alert title="THEME FALLBACK" type={"info"}>
-  In case the theme is not provided, <b>RichTextLexicalRenderer</b> component have fallback styles that will
-  rendered for the lists, paragraphs, heading and other html elements.
-</Alert>
+## Custom Configuration
 
-## Advance Customizations
+Sometimes you need a custom content modifications, Webiny allow you to add custom Lexical editor features and render your content with `RichTextLexicalRenderer` component.
 
-Sometimes you need a custom content modifications, Webiny allow you to add custom features and modify the existing one.
+<Image src={configureLexicalRenderer} title="Advanced Content Customization And Rendering" />
 
-<Image src={configureLexicalRenderer} title="Advanced Configuration" />
-
-To add custom features, you need to start in the following order.
+To render custom Lexical editor configuration from the Headless CMS, you need to start in the following order.
 1. You need to configure Lexical Editor <diagram-letter>A</diagram-letter> in the Headless CMS.
 2. Copy Lexical nodes <diagram-letter>A3</diagram-letter> and theme styles <diagram-letter>A4</diagram-letter> from the Webiny Project 
 to your custom React project <diagram-letter>B</diagram-letter>.
@@ -108,9 +102,7 @@ to your custom React project <diagram-letter>B</diagram-letter>.
 
 ### Add node
 
-If you already have added the custom features in the Lexical Editor in the Headless CMS, all you need to do now, 
-is to  your custom Lexical nodes from the Webiny project, add to your custom project, and provide the Lexical nodes in array 
-as is presented in the code below:
+To render the Lexical nodes from the Headless CMS app, add the same custom Lexical nodes to the renderer component.
 
 ```tsx HomePage.tsx
 import React from 'react';
@@ -128,4 +120,4 @@ export const HomePage = () => {
 }
 ```
 
-Please check [lexical docs](https://lexical.dev/docs/concepts/nodes), to learn more how create your custom nodes.
+For more information on Lexical custom nodes, please check out the [Lexical documentation](https://lexical.dev/docs/concepts/nodes).
