feat: update changelog

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -21,6 +21,7 @@ import pbFixesLinkedIn from "./assets/pb-fixes-linked-in.png";
 import pbCellMirroring from "./assets/pb-cell-mirroring.png";
 import pbFixesElementTypesHumanReadable from "./assets/pb-fixes-element-types-human-readable.png";
 import pbFixesDndImprovedMessages from "./assets/pb-fixes-dnd-improved-messages.png";
+import pbFixesUnlinkingTpl from "./assets/pb-fixes-unlinking-tpl.png";
 import hcmslexicalEditor from "./assets/hcms-lexical-editor.png";
 import hcmsLegacyRteLook from "./assets/hcms-legacy-rte-look.png";
 import fmGridView from "./assets/fm-grid-view.png";
@@ -176,6 +177,12 @@ export const typography = {
 
 // ...
 ```
+
+#### Fixed Unlinking Pages From Page Templates ([#3403](https://github.com/webiny/webiny-js/pull/3403))
+
+Unlinking a page from a page template is now working as expected. Previously, unlinking a page would result in an error, preventing users from unlinking pages from page templates.
+
+<Image title={"Fixed Unlinking Pages From Page Templates"} src={pbFixesUnlinkingTpl} />
 
 #### Improved Messaging In the Page Builder Editor ([#3403](https://github.com/webiny/webiny-js/pull/3403))
 
