feat: add new file extension articles

--- a/src/docs/5.37.x/file-manager/extending/customize-file-filters.mdx
+++ b/src/docs/5.37.x/file-manager/extending/customize-file-filters.mdx
@@ -1,37 +1,34 @@
 ---
-title: Customizing File Filters
+title: Customize File Filters
 description: Learn how to add, replace, or remove filters in the File Manager.
 ---
 
+import { Alert } from "@/components/Alert";
+import { CanIUseThis } from "@/components/CanIUseThis";
+import { WhatYouWillLearn } from "@/components/WhatYouWillLearn";
 import fmFilters from "./assets/fm-filters.png";
-import fmGridView from "./assets/fm-grid-view.png";
-import fmFileDetails from "./assets/fm-file-details.png";
 import fmToggleFilter from "./assets/fm-toggle-filter.gif";
 import fmDropdownFilter from "./assets/fm-dropdown-filter.gif";
 import fmPositioBefore from "./assets/fm-position-before.png";
 import fmDiscoverFilters from "./assets/fm-discover-filters.png";
 
-import { Alert } from "@/components/Alert";
 
-<Alert type="info" title="Can I Use This?">
+<CanIUseThis since={"5.37.0"} />
 
-This feature is available since Webiny **v5.37.0**.
-
-</Alert>
-
-<Alert type="success" title="What you'll learn">
+<WhatYouWillLearn>
 
 - how to add a custom filter to the File Manager
 - how to discover existing filter names
 - how to change the position of filters, remove, or replace an existing filter
 
-</Alert>
+</WhatYouWillLearn>
 
 ## Overview
 
-By default, File Manager offers a single built-in filter, to help you quickly filter files based on their type (images, documents, videos). To customize filters, you need to use the `FileManagerViewConfig` component. For this article, we will use the `Filter` component, located in the `Browser` namespace. 
+By default, File Manager offers a single built-in filter, to help you quickly filter files based on their type (images, documents, videos). To customize filters, you need to use the `FileManagerViewConfig` component. For this article, we will use the `Filter` component, located in the `Browser` namespace.
 
 Browser is the main area of the File Manager, where users browse files, apply filters, perform searching, organize files into folders, upload new files, etc.
+
 <Image src={fmFilters} title="Browser and the built-in filter by type" />
 
 ## Add a Filter
@@ -71,7 +68,7 @@ Next time you open your File Manager, and expand the filters bar, you'll see you
 The following example shows how to implement a filter that toggles between "all files" and "large files". For this example, we treat all files larger than 200KB as "large files". Note that we are only showing the actual filter implementation. To see the filter registration
 process, revisit the previous section.
 
-```tsx Toggle Filter
+```tsx apps/admin/src/App.tsx
 import { useBind } from "@webiny/form";
 import { ButtonSecondary } from "@webiny/ui/Button";
 
@@ -102,7 +99,7 @@ Sometimes, you need to implement filtering logic that is a bit more complex than
 
 To correctly format our filters, we'll use the `Browser.FiltersToWhere` component to register our custom converter, which will allow you to convert form data to a valid GraphQL query input. With this approach, you have full control over values that will be passed to the API, when the user interacts with the filters UI.
 
-```tsx Dropdown Filter
+```tsx apps/admin/src/App.tsx
 import { useBind } from "@webiny/form";
 import { Select } from "@webiny/ui/Select";
 
@@ -143,11 +140,11 @@ const convertFilters = ({ size, ...rest }: any) => {
 <Image src={fmDropdownFilter} title="Dropdown Filter in Action" />
 
 <Alert type={"info"} title={"Multiple Converters"}>
-  You can add as many converters as you need. The output of the previous converter will be passed as an
-  input to the next converter.
+  You can add as many converters as you need. The output of the previous converter will be passed as
+  an input to the next converter.
 </Alert>
 
-## Discovering Filters
+## Discover Filters
 
 This section demonstrates how you can discover the names of existing filters. This is important for further sections on positioning, removing, and replacing filters.
 
@@ -155,11 +152,11 @@ The easiest way to discover existing filters is to use the React Dev Tools plugi
 
 <Image src={fmDiscoverFilters} title="Discover Existing Filters" />
 
-## Positioning a Filter
+## Position a Filter
 
 To position your custom filter before or after an existing filter, you can use the `before` and `after` props on the `<Filter>` element:
 
-```tsx
+```tsx apps/admin/src/App.tsx
 <FileManagerViewConfig>
   <Browser.Filter name={"size"} element={<FilterBySize />} before={"type"} />
 </FileManagerViewConfig>
@@ -167,21 +164,21 @@ To position your custom filter before or after an existing filter, you can use t
 
 <Image src={fmPositioBefore} title="Position Your Filter Before Another Filter" />
 
-## Removing a Filter
+## Remove a Filter
 
 Sometimes you might want to remove an existing filter. All you need to do is reference the filter by name, and pass a `remove` prop to the `<Filter>` element:
 
-```tsx
+```tsx apps/admin/src/App.tsx
 <FileManagerViewConfig>
   <Browser.Filter name={"type"} remove />
 </FileManagerViewConfig>
 ```
 
-## Replacing a Filter
+## Replace a Filter
 
 To replace an existing filter with a new filter element, you need to reference the existing filter by name, and pass a new element via the `element` prop:
 
-```tsx
+```tsx apps/admin/src/App.tsx
 <FileManagerViewConfig>
   <Browser.Filter name={"type"} element={<span>A new filter!</span>} />
 </FileManagerViewConfig>
