wip: updated code and content after feeback

--- a/src/docs/5.37.x/page-builder/extending/lexical-editor-configuration-api.mdx
+++ b/src/docs/5.37.x/page-builder/extending/lexical-editor-configuration-api.mdx
@@ -73,7 +73,7 @@ import { LexicalEditorConfig } from "@webiny/app-page-builder";
 const { Heading, Paragraph } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
-	<Heading.ToolbarAction name={"toolbarAction"} element={<ToolbarAction />} />
+  <Heading.ToolbarAction name={"toolbarAction"} element={<ToolbarAction />} />
   <Paragraph.Plugin name={"newPlugin"} element={<NewLexicalPlugin />} />
   <Paragraph.Node name={"newNode"} node={NewLexicalNode} />
 </LexicalEditorConfig>
@@ -119,8 +119,8 @@ import { LexicalEditorConfig } from "@webiny/app-page-builder";
 const { Heading, Paragraph } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
-	<Heading.ToolbarAction name={"myAction"} element={<button>MA</button>} />
-  <Paragraph.ToolbarAction name={"newAction"} element={<button>MA</button>} />
+ <Heading.ToolbarAction name={"myAction"} element={<MyNewCustomAction />} />
+ <Paragraph.ToolbarAction name={"newAction"} element={<MyNewCustomAction />} />
 </LexicalEditorConfig>
 ```
 
@@ -135,7 +135,7 @@ import { LexicalEditorConfig } from "@webiny/app-page-builder";
 const { Heading } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
-	<Heading.ToolbarAction name={"fontSize"} element={<button>MA</button>} />
+ <Heading.ToolbarAction name={"fontSize"} element={<MyCustomFontSizeAction />} />
 </LexicalEditorConfig>
 ```
 
@@ -150,7 +150,7 @@ import { LexicalEditorConfig } from "@webiny/app-page-builder";
 const { Paragraph } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
-	<Paragraph.ToolbarAction name={"fontSize"} remove/>
+ <Paragraph.ToolbarAction name={"fontSize"} remove/>
 </LexicalEditorConfig>
 ```
 
@@ -165,8 +165,8 @@ import { LexicalEditorConfig } from "@webiny/app-page-builder";
 const { Heading, Paragraph } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
-	<Heading.ToolbarAction name={"fontSize"} after={"typography"}/>
-  <Paragraph.ToolbarAction name={"fontSize"} before={"divider2"}/>
+ <Heading.ToolbarAction name={"fontSize"} after={"typography"}/>
+ <Paragraph.ToolbarAction name={"fontSize"} before={"divider2"}/>
 </LexicalEditorConfig>
 ```
 ## Plugin configuration
@@ -181,7 +181,7 @@ const { Heading, Paragraph } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
   {/* Override the default Webiny link plugin with your custom link plugin */}
-	<Heading.Plugin name={"link"} element={<CustomFloatingLinkEditorPlugin />}/>
+  <Heading.Plugin name={"link"} element={<CustomFloatingLinkEditorPlugin />}/>
   {/* Remove the plugin for the font size formatting */}
   <Paragraph.Plugin name={"fontSize"} remove />
   {/* Add a new plugin */}
@@ -250,15 +250,15 @@ import { LexicalEditorConfig } from "@webiny/app-headless-cms";
 const { ToolbarAction } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
-   {/* Override the default font size action */}
-	<ToolbarAction name={"fontSize"} element={<button>MA</button>} />
-   {/* Remove the plugin for the font size formatting */}
+  {/* Override the default font size action */}
+	<ToolbarAction name={"fontSize"} element={<MyFontSizeButton />} />
+  {/* Remove the plugin for the font size formatting */}
   <ToolbarAction name={"fontSize"} remove />
-  // Add a new toolbar action
-  <ToolbarAction name={"myAction"} element={<button>MA</button>} />
-  // Place your new toolbar action after the typography action
+  {/* Add a new toolbar action */}
+  <ToolbarAction name={"myAction"} element={<MyActionButton />} />
+  {/* Place your new toolbar action after the typography action */}
   <ToolbarAction name={"myAction"} after={"typography"} />
-  // Place the existing link action before your new plugin
+  {/* Place the existing link action before your new plugin */}
   <ToolbarAction name={"link"} before={"newPLugin"} />
 </LexicalEditorConfig>
 ```
@@ -274,16 +274,16 @@ import { LexicalEditorConfig } from "@webiny/app-headless-cms";
 const { Plugin } = LexicalEditorConfig;
 
 <LexicalEditorConfig>
-  // Override the default Webiny link plugin with your custom link plugin
-	<Plugin name={"link"} element={<CustomFloatingLinkEditorPlugin />}/>
-  // Remove the plugin for the font size formatting
-  <Plugin name={"fontSize"} remove />
-  // Add a new plugin
-  <Plugin name={"newPLugin"} element={<NewPlugin/>} />
-  // Place your plugin after the font size plugin
-  <Plugin name={"newPLugin"} element={<NewPlugin/>} after={"fontSize"} />
-  // Place the existing plugin before your new plugin
-  <Plugin name={"link"} before={"newPLugin"} />
+  {/* Override the default Webiny link plugin with your custom link plugin */}
+	<Plugin name={"link"} element={<CustomFloatingLinkEditorPlugin />}/> */}
+  {/* Remove the plugin for the font size formatting */}
+  <Plugin name={"fontSize"} remove /> */}
+  {/* Add a new plugin */}
+  <Plugin name={"newPLugin"} element={<NewPlugin/>} /> */}
+  {/* Place your plugin after the font size plugin */}
+  <Plugin name={"newPLugin"} element={<NewPlugin/>} after={"fontSize"} /> */}
+  {/* Place the existing plugin before your new plugin */}
+  <Plugin name={"link"} before={"newPLugin"} /> */}
 </LexicalEditorConfig>
 ```
 
@@ -297,14 +297,14 @@ import { LexicalEditorConfig } from "@webiny/app-headless-cms";
 
 const { Node } = LexicalEditorConfig;
 
-<LexicalEditorConfig>
-  // Add a new node
+<LexicalEditorConfig> 
+  {/* Add a new node */}
   <Node name={"newNode"} node={NewNode} />
-  // Place your chat node after the NewNode
+  {/* Place your chat node after the NewNode */}
   <Node name={"chatNode"} node={ChatNode} after={ChatNode} />
-  // Place your chat node after the NewNode
+  {/* Place your chat node after the NewNode */}
   <Node name={"chatNode"} before={ChatNode} />
-  // Remove your nodo
+  {/* Remove your node */}
   <Node name={"newNode"} remove />
 </LexicalEditorConfig>
 ```
