--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -72,7 +72,7 @@ We believe the new editor will significantly improve the content editing experie
 
 </Alert>
 
-Note that with the introduction to the new Lexical editor, the old rich text editor (based on ([Editor.js](https://editorjs.io/))) will become deprecated. This means the following:
+Note that with the introduction to the new Lexical editor, the old rich text editor (based on [Editor.js](https://editorjs.io/)) will become deprecated. This means the following:
 
 - users will no longer be able to use the legacy editor with new content models and Rich Text fields
 - we will no longer be maintaining or developing features for this editor
