feat: add HCMS + ACO chapter

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -22,6 +22,9 @@ import pbCellMirroring from "./assets/pb-cell-mirroring.png";
 import pbFixesElementTypesHumanReadable from "./assets/pb-fixes-element-types-human-readable.png";
 import pbFixesDndImprovedMessages from "./assets/pb-fixes-dnd-improved-messages.png";
 import pbFixesUnlinkingTpl from "./assets/pb-fixes-unlinking-tpl.png";
+import hcmsAcoOverview from "./assets/hcms-aco-overview.png";
+import hcmsActions from "./assets/hcms-actions.png";
+import hcmsFilters from "./assets/hcms-filters.png";
 import hcmslexicalEditor from "./assets/hcms-lexical-editor.png";
 import hcmsLegacyRteLook from "./assets/hcms-legacy-rte-look.png";
 import fmGridView from "./assets/fm-grid-view.png";
@@ -57,6 +60,31 @@ All of these improvements take our File Manager to the next level. But the big c
 </Alert>
 
 ## Headless CMS
+
+### Introducing Advanced Content Organization for Headless CMS ([#3356](https://github.com/webiny/webiny-js/pull/3356))
+
+The Advanced Content Organization (ACO) for Headless CMS is a new feature that allows users to organize content in a practical, easy-to-manage way. The ACO enables users to add entries in separate folders and rearrange content as needed, making it easier to find what they are looking for.
+
+<Image src={hcmsAcoOverview} title={"Advanced Content Organization for Headless CMS Overview"} />
+
+**With the new Headless CMS, users can:**
+
+1. Create and update a multi-level folder structure.
+2. Sort folders and entries based on "Name" and "Last Modified". This feature makes it easier for users to find specific entries and folders quickly.
+3. Move entries across the hierarchy tree.
+
+### Headless CMS Entry List and Editor Customisation ([#3391](https://github.com/webiny/webiny-js/pull/3391))
+The Headless CMS offers various default features that developers may want to tweak, eliminate, or add new ones to enhance the user experience and cater to the specific requirements of their users.
+
+With this release, we present developers with a fresh approach to engage with a few of the Headless CMS's core features:
+
+1. [Entry List Filters](/docs/headless-cms/extending/customize-entry-list-filters)
+2. [Entry Editor Actions](/docs/headless-cms/extending/customize-entry-editor-actions)
+
+<Gallery>
+  <Image title={"Entry List default Filter"} src={hcmsFilters} />
+  <Image title={"Entry Editor default Actions"} src={hcmsActions} />
+</Gallery>
 
 ### Introducing Lexical Editor For the Rich Text Field ([#3368](https://github.com/webiny/webiny-js/pull/3368))
 
