fix: correct link

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -161,7 +161,7 @@ With the already existing Facebook, Instagram, and Twitter URL fields in the Web
 
 #### Responsive Styles For Typography ([#3405](https://github.com/webiny/webiny-js/pull/3405))
 
-Via the [theme object](/docs/{exact:5.37.0}/page-builder/theming/theme-object), it's now possible to define responsive styles for typography. The following example shows how we can have different font size for the heading on different screen sizes.
+Via the [theme object](/docs/{exact:5.37.x}/page-builder/theming/theme-object), it's now possible to define responsive styles for typography. The following example shows how we can have different font size for the heading on different screen sizes.
 
 ```diff-ts apps/theme/theme.ts
 // ...
