wip: updated sicover action names image and added tables with built-in API names

--- a/src/docs/5.37.x/page-builder/extending/lexical-editor.mdx
+++ b/src/docs/5.37.x/page-builder/extending/lexical-editor.mdx
@@ -43,7 +43,7 @@ In this article we will cover the Lexical Editor configuration for the heading a
 
 This section demonstrates how you can discover the names of existing toolbar actions. This is important for further sections on positioning, removing, and replacing actions.
 
-The easiest way to discover existing actions is to use the React Dev Tools plugins for your browser, and look for the name of action element. From there, you can look at Fragment key value.
+The easiest way to discover existing actions is to use the React Dev Tools plugins for your browser, and select the toolbar action element. From there, you can look at Fragment key value.
 <Image
   title="Discover Toolbar Actions Names"
   src={discoverToolbarActions}
@@ -91,7 +91,7 @@ To replace an existing action with a new action element, you need to reference t
 ```
 
 #### Remove Action
-Sometimes you might want to remove an action. All you need to do is reference the action by name, and pass a `remove` prop to the `<Heading.ToolbarAction>` element:
+To remove an action, all you need to do is reference the action by name, and pass a `remove` prop to the `<Heading.ToolbarAction>` element:
 ```jsx apps/admin/src/App.tsx
 <LexicalEditorConfig>
 {/* Custom action */}
@@ -112,6 +112,23 @@ To position existing or new custom action you can use `before` or `after` props 
 </LexicalEditorConfig>;
 ```
 
+#### Built-in Toolbar Actions
+
+| Component | Name | Description |
+| --- | --- | --- |
+| FontSizeAction | fontSize | Set font size  |
+| FontColorAction | fontColor | Change the font color of the text |
+| TypographyAction | typography | Apply typography styles specified in the theme for the particular selected block of text. For example paragraph, header, list, etc. |
+|  BoldAction | boldAction | Set bold to the selected text. |
+| ItalicAction | italic | Set the italic style to the text. |
+| UnderlineAction | underline | Set underline style to the text. |
+| CodeHighlightAction | codeHighlight | Apply code highlight to the text. |
+| NumberedListAction | numberedList | Convert the header or paragraph text block into a numbered list. |
+| BulletListAction | bulletList | Convert the header or paragraph text block into a bullet list. |
+| ImageAction | image | Open File Manager where the user can select and insert one image at a time.  |
+| LinkAction | link | Open a pop-up where the user can set the URL and convert the text to a link. |
+| QuoteAction | quote | Convert the selected text block to a quote. |
+
 ### Plugins
 You have the ability to add, replace, remove, or position lexical plugins. To learn more, please refer to the topics listed below.
 Please read the [official docs](https://lexical.dev/docs/react/plugins) for more information about the lexical plugins.
@@ -130,7 +147,7 @@ To replace an existing plugin with a new plugin, you need to reference the exist
 ```
 
 #### Remove Plugin
-Sometimes you might want to remove a plugin. All you need to do is reference the plugin by name, and pass a `remove` prop to the `<Heading.Plugin>` element:
+Tto remove a plugin, all you need to do is reference the plugin by name, and pass a `remove` prop to the `<Heading.Plugin>` element:
 ```jsx apps/admin/src/App.tsx
   {/* Add a new plugin */}
   <Heading.Plugin name={"link"} remove />
@@ -144,6 +161,18 @@ To position existing or custom plugins you can use `before` or `after` props on 
   <Heading.Plugin name={"link"} before={"newPlugin"} />
 ```
 
+#### Built-in Plugins
+
+| Component | Name | Description |
+| --- | --- | --- |
+| FontColorPlugin | fontColor | Apply font color to the text. |
+| ListPlugin | list | Format the bullet and numbered lists. |
+| CodeHighlightPlugin | codeHighlight | Format code highlight. |
+| TypographyPlugin | typography | Format and apply typography styles for the selected text block. |
+| LinkPlugin | link | Format text to link. |
+| FloatingLinkEditorPlugin | floatingLinkEditor | Manage the form and position of the floating pop-up window where the user can edit the links.  |
+| ImagesPlugin | images | Insert and edit an image. |
+| QuotePlugin | quote | Format the selected text block to quote. This plugin will create quoteblock html tag.  |
 
 ### Nodes
 You have the ability to add, replace, remove, or position lexical nodes. To learn more, please refer to the topics listed below.
@@ -178,6 +207,22 @@ To position your nodes, you can use `before` or `after` props on the `<Heading.N
 <Heading.Node name={"emojis"} node={EmojisPlugin} after={"newNode"} />;
 <Heading.Node name={"chatNode"} node={ChatNode} before={"emojis"} />;
 ```
+
+### Built-in Nodes
+
+| Node Class | Node type | Imported from Lexical framework | API access | Overrides the default Lexical node |
+| --- | --- | --- | --- | --- |
+| FontColorNode | font-color-node |  | No | No |
+| ImageNode | image | No | No | No |
+| ListNode | webiny-list | No | No | No |
+| ListItemNode | webiny-listitem | No | No | No |
+| CodeNode | code | Yes | No | No |
+| HashtagNode | hashtag | Yes | No | No |
+| CodeHighlightNode | code-highlight | Yes | No | No |
+| TypographyElementNode | typography-el-node | No | No | No |
+| ParagraphNode | paragraph-element | No | No | Yes |
+| HeaderNode | header-element | No | No | Yes |
+| QuoteNode | webiny-quote | No | No | Yes |
 
 ## Paragraph Element
 
@@ -214,7 +259,7 @@ To replace an existing action with a new action element, you need to reference t
 ```
 
 #### Remove Action
-Sometimes you might want to remove an action. All you need to do is reference the action by name, and pass a remove prop to the `<Paragraph.ToolbarAction>` element:
+To remove an action, all you need to do is reference the action by name, and pass a remove prop to the `<Paragraph.ToolbarAction>` element:
 ```jsx apps/admin/src/App.tsx
 <LexicalEditorConfig>
  <Paragraph.ToolbarAction name={"fontSize"} remove />
@@ -302,9 +347,6 @@ To position your nodes, you can use `before` or `after` props on the `<Paragraph
 
 
 
-
-
-
 [//]: # (## Lexical Components Catalog)
 
 [//]: # ()
@@ -313,8 +355,8 @@ To position your nodes, you can use `before` or `after` props on the `<Paragraph
 [//]: # ()
 [//]: # (The table below presents a comprehensive list of toolbar action components utilized by Webiny and made accessible via the Lexical Configuration API in  `@webiny/app-page-builder` and `@webiny/app-headless-cms` package.)
 
-[//]: # ()
-[//]: # (**Lexical Toolbar Actions**)
+()
+(**Lexical Toolbar Actions**)
 
 [//]: # ()
 [//]: # (| Component | API Access name | Description |)
